--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,7 +7,7 @@
 
 
     <ImageView
-        android:id="@+id/detail"
+        android:id="@+id/image"
         android:layout_width="100dp"
         android:layout_height="100dp"
         app:srcCompat="@mipmap/ic_launcher" />
